took out a lot of html made signup and login

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Sneaker Exchange</title>
+    <title>The Sneaker Exchange</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
