--- a/public/login-register.html
+++ b/public/login-register.html
@@ -28,42 +28,7 @@
 
 <body>
 <header class="header-area header-in-container clearfix">
-    <div class="header-top-area">
-        <div class="container">
-            <div class="header-top-wap">
-                <div class="language-currency-wrap">
-                    <div class="same-language-currency language-style">
-                        <a href="#">English <i class="fa fa-angle-down"></i></a>
-                        <div class="lang-car-dropdown">
-                            <ul>
-                                <li><a href="#">Arabic </a></li>
-                                <li><a href="#">Bangla </a></li>
-                                <li><a href="#">Hindi  </a></li>
-                                <li><a href="#">Spanish </a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="same-language-currency use-style">
-                        <a href="#">USD  <i class="fa fa-angle-down"></i></a>
-                        <div class="lang-car-dropdown">
-                            <ul>
-                                <li><a href="#">Taka (BDT) </a></li>
-                                <li><a href="#">Riyal (SAR) </a></li>
-                                <li><a href="#">Rupee (INR)  </a></li>
-                                <li><a href="#">Dirham (AED) </a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="same-language-currency">
-                        <p>Call Us 0123456</p>
-                    </div>
-                </div>
-                <div class="header-offer">
-                    <p>Free delivery on order over <span>$200</span></p>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <div class="header-bottom sticky-bar header-res-padding">
         <div class="container">
             <div class="row">
@@ -386,7 +351,7 @@
         <div class="breadcrumb-content text-center">
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="/listings">Home</a>
                 </li>
                 <li class="active">login/Register </li>
             </ul>
@@ -445,6 +410,8 @@
         </div>
     </div>
 </div>
+
+
 <footer class="footer-area bg-gray pt-100 pb-70">
     <div class="container">
         <div class="row">
