--- a/public/about.html
+++ b/public/about.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Flone - Minimal eCommerce HTML Template</title>
+    <title>The Sneaker Exchange</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -28,42 +28,6 @@
 
 <body>
 <header class="header-area header-in-container clearfix">
-    <div class="header-top-area">
-        <div class="container">
-            <div class="header-top-wap">
-                <div class="language-currency-wrap">
-                    <div class="same-language-currency language-style">
-                        <a href="#">English <i class="fa fa-angle-down"></i></a>
-                        <div class="lang-car-dropdown">
-                            <ul>
-                                <li><a href="#">Arabic </a></li>
-                                <li><a href="#">Bangla </a></li>
-                                <li><a href="#">Hindi  </a></li>
-                                <li><a href="#">Spanish </a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="same-language-currency use-style">
-                        <a href="#">USD  <i class="fa fa-angle-down"></i></a>
-                        <div class="lang-car-dropdown">
-                            <ul>
-                                <li><a href="#">Taka (BDT) </a></li>
-                                <li><a href="#">Riyal (SAR) </a></li>
-                                <li><a href="#">Rupee (INR)  </a></li>
-                                <li><a href="#">Dirham (AED) </a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="same-language-currency">
-                        <p>Call Us 0123456</p>
-                    </div>
-                </div>
-                <div class="header-offer">
-                    <p>Free delivery on order over <span>$200</span></p>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="header-bottom sticky-bar header-res-padding">
         <div class="container">
             <div class="row">
@@ -78,56 +42,9 @@
                     <div class="main-menu">
                         <nav>
                             <ul>
-                                <li><a href="index-2.html">Home <i class="fa fa-angle-down"></i></a>
+                                <li><a href="/listings">Home <i class="fa fa-angle-down"></i></a>
                                     <ul class="mega-menu mega-menu-padding">
-                                        <li>
-                                            <ul>
-                                                <li class="mega-menu-title"><a href="#">Demo Group 01</a></li>
-                                                <li><a href="index-2.html">Home 1 – Fashion</a></li>
-                                                <li><a href="index-3.html">Home 2 – Fashion</a></li>
-                                                <li><a href="index-4.html">Home 3 – Fashion</a></li>
-                                                <li><a href="index-5.html">Home 4 – Fashion</a></li>
-                                                <li><a href="index-6.html">Home 5 – Fashion</a></li>
-                                                <li><a href="index-7.html">Home 6 – Fashion</a></li>
-                                                <li><a href="index-8.html">Home 7 – Fashion</a></li>
-                                                <li><a href="index-9.html">Home 8 – Minimal</a></li>
-                                                <li><a href="index-10.html">Home 9 – Electronics</a></li>
-                                                <li><a href="index-11.html">Home 10 – Furniture</a></li>
-                                                <li><a href="index-12.html">Home 11 - showcase slider</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <ul>
-                                                <li class="mega-menu-title"><a href="#">Demo Group 02</a></li>
-                                                <li><a href="index-13.html">Home 12 – Plants</a></li>
-                                                <li><a href="index-14.html">Home 13 – Cosmetic</a></li>
-                                                <li><a href="index-15.html">Home 14 – Christmas</a></li>
-                                                <li><a href="index-16.html">Home 15 – Fruit</a></li>
-                                                <li><a href="index-17.html">Home 16 –  Black Friday</a></li>
-                                                <li><a href="index-18.html">Home 17 – Flower</a></li>
-                                                <li><a href="index-19.html">Home 18 – Book</a></li>
-                                                <li><a href="index-20.html">Home 19 – Fashion</a></li>
-                                                <li><a href="index-21.html">Home 20 – Electronics</a></li>
-                                                <li><a href="index-22.html">Home 21 – Furniture</a></li>
-                                                <li><a href="index-23.html">Home 22 – Handmade</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <ul>
-                                                <li class="mega-menu-title"><a href="#">Demo Group 03</a></li>
-                                                <li><a href="index-24.html">Home 23 – Organic</a></li>
-                                                <li><a href="index-25.html">Home 24 – Pet Food</a></li>
-                                                <li><a href="index-26.html">Home 25 – Auto Parts</a></li>
-                                                <li><a href="index-27.html">Home 26 – Cake Shop</a></li>
-                                                <li><a href="index-28.html">Home 27 – Kids Fashion</a></li>
-                                                <li><a href="index-29.html">Home 28 – Book Shop</a></li>
-                                                <li><a href="index-30.html">Home 29 – Flower Shop</a></li>
-                                                <li><a href="index-31.html">Home 30 – Instagram</a></li>
-                                                <li><a href="index-32.html">Home 31 – Black Friday</a></li>
-                                                <li><a href="index-33.html">Home 32 – Valentine Day</a></li>
-                                                <li><a href="index-34.html">Home 33 – Medical Equipment</a></li>
-                                            </ul>
-                                        </li>
+                            
                                     </ul>
                                 </li>
                                 <li><a href="shop.html"> Shop <i class="fa fa-angle-down"></i> </a>
@@ -462,154 +379,8 @@
         </div>
     </div>
 </div>
-<div class="funfact-area bg-gray-3 pt-100 pb-70">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="single-count text-center mb-30">
-                    <div class="count-icon">
-                        <i class="pe-7s-portfolio"></i>
-                    </div>
-                    <h2 class="count">360</h2>
-                    <span>project done</span>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="single-count text-center mb-30">
-                    <div class="count-icon">
-                        <i class="pe-7s-cup"></i>
-                    </div>
-                    <h2 class="count">690</h2>
-                    <span>cups of coffee</span>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="single-count text-center mb-30">
-                    <div class="count-icon">
-                        <i class="pe-7s-light"></i>
-                    </div>
-                    <h2 class="count">420</h2>
-                    <span>branding</span>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="single-count text-center mb-30 mrgn-none">
-                    <div class="count-icon">
-                        <i class="pe-7s-smile"></i>
-                    </div>
-                    <h2 class="count">100</h2>
-                    <span>happy clients</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="team-area pt-95 pb-70">
-    <div class="container">
-        <div class="section-title-2 text-center mb-60">
-            <h2>Team Members</h2>
-            <p>Lorem ipsum dolor sit amet conse ctetu.</p>
-        </div>
-        <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="team-wrapper mb-30">
-                    <div class="team-img">
-                        <a href="#">
-                            <img src="assets/img/team/team-1.jpg" alt="">
-                        </a>
-                        <div class="team-action">
-                            <a class="facebook" href="#">
-                                <i class="fa fa-facebook"></i>
-                            </a>
-                            <a class="twitter" title="Wishlist" href="#">
-                                <i class="fa fa-twitter"></i>
-                            </a>
-                            <a class="instagram" href="#">
-                                <i class="fa fa-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="team-content text-center">
-                        <h4>Mr.Mike Banding</h4>
-                        <span>Manager </span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="team-wrapper mb-30">
-                    <div class="team-img">
-                        <a href="#">
-                            <img src="assets/img/team/team-3.jpg" alt="">
-                        </a>
-                        <div class="team-action">
-                            <a class="facebook" href="#">
-                                <i class="fa fa-facebook"></i>
-                            </a>
-                            <a class="twitter" title="Wishlist" href="#">
-                                <i class="fa fa-twitter"></i>
-                            </a>
-                            <a class="instagram" href="#">
-                                <i class="fa fa-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="team-content text-center">
-                        <h4>Mr.Peter Pan</h4>
-                        <span>Developer </span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="team-wrapper mb-30">
-                    <div class="team-img">
-                        <a href="#">
-                            <img src="assets/img/team/team-2.jpg" alt="">
-                        </a>
-                        <div class="team-action">
-                            <a class="facebook" href="#">
-                                <i class="fa fa-facebook"></i>
-                            </a>
-                            <a class="twitter" title="Wishlist" href="#">
-                                <i class="fa fa-twitter"></i>
-                            </a>
-                            <a class="instagram" href="#">
-                                <i class="fa fa-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="team-content text-center">
-                        <h4>Ms.Sophia</h4>
-                        <span>Designer </span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="team-wrapper mb-30">
-                    <div class="team-img">
-                        <a href="#">
-                            <img src="assets/img/team/team-4.jpg" alt="">
-                        </a>
-                        <div class="team-action">
-                            <a class="facebook" href="#">
-                                <i class="fa fa-facebook"></i>
-                            </a>
-                            <a class="twitter" title="Wishlist" href="#">
-                                <i class="fa fa-twitter"></i>
-                            </a>
-                            <a class="instagram" href="#">
-                                <i class="fa fa-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="team-content text-center">
-                        <h4>Mr.John Lee</h4>
-                        <span>Chairmen </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
+
 <div class="brand-logo-area pb-100 about-brand-logo">
     <div class="container">
         <div class="brand-logo-active owl-carousel owl-dot-none">
