fixed my created action and show action

--- a/public/shop.html
+++ b/public/shop.html
@@ -34,7 +34,7 @@
             <div class="row">
                 <div class="col-xl-2 col-lg-2 col-md-6 col-4">
                     <div class="logo">
-                        <a href="/listings">
+                        <a href="/">
                             <img alt="" src="assets/img/logo/logo.png">
                         </a>
                     </div>
@@ -49,15 +49,13 @@
                                         <li>
                                             <ul>
                                                 <li class="mega-menu-title"><a href="#">shop layout</a></li>
-                                                <li><a href="shop.html">standard style</a></li>
-                                                <li><a href="shop-filter.html">Grid filter style</a></li>
-                                                <li><a href="shop-grid-2-col.html">Grid 2 column</a></li>
-                                                <li><a href="shop-no-sidebar.html">Grid No sidebar</a></li>
+                                                <!-- <li><a href="shop.html">standard style</a></li> -->
+                                                <!-- <li><a href="shop-filter.html">Grid filter style</a></li> -->
+                                                <!-- <li><a href="shop-grid-2-col.html">Grid 2 column</a></li> -->
+                                                <!-- <li><a href="shop-no-sidebar.html">Grid No sidebar</a></li> -->
                                                 <li><a href="shop-grid-fw.html">Grid full wide </a></li>
-                                                <li><a href="shop-right-sidebar.html">Grid right sidebar</a></li>
-                                                <li><a href="shop-list.html">list 1 column box </a></li>
-                                                <li><a href="shop-list-fw.html">list 1 column full wide </a></li>
-                                                <li><a href="shop-list-fw-2col.html">list 2 column  full wide</a></li>
+                                                <!-- <li><a href="shop-right-sidebar.html">Grid right sidebar</a></li> -->
+                                                   
                                             </ul>
                                         </li>
                                         <li>
