--- a/public/index.html
+++ b/public/index.html
@@ -1,57 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="zxx">
+  <!-- Mirrored from htmldemo.hasthemes.com/flone/flone/index-3.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Mar 2021 22:07:14 GMT -->
+  <!-- Added by HTTrack -->
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+  <!-- /Added by HTTrack -->
+  <head>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css" rel="stylesheet" />
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
 
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
+      type="text/css"
+    />
 
-<!-- Mirrored from htmldemo.hasthemes.com/flone/flone/index-3.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Mar 2021 22:07:14 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>The Sneaker Exchange</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
-    
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png" />
+
     <!-- CSS
 	============================================ -->
-   
+
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
     <!-- Icon Font CSS -->
-    <link rel="stylesheet" href="/assets/css/icons.min.css">
+    <link rel="stylesheet" href="/assets/css/icons.min.css" />
     <!-- Plugins CSS -->
-    <link rel="stylesheet" href="/assets/css/plugins.css">
+    <link rel="stylesheet" href="/assets/css/plugins.css" />
     <!-- Main Style CSS -->
-    <link rel="stylesheet" href="/assets/css/style.css">
-</head>
+    <link rel="stylesheet" href="/assets/css/style.css" />
+  </head>
 
-<body id="page-top">
+  <body id="page-top">
+    <div id="app"></div>
 
-
-  <div id="app"></div>
-
-
-
-
-
-
-
-<!-- All JS is here
+    <!-- All JS is here
 ============================================ -->
 
-<script src="/assets/js/vendor/modernizr-3.6.0.min.js"></script>
-<script src="/assets/js/vendor/jquery-3.5.1.min.js"></script>
-<script src="/assets/js/vendor/jquery-migrate-3.3.0.min.js"></script>
-<script src="/assets/js/vendor/bootstrap.bundle.min.js"></script>
-<script src="/assets/js/plugins.js"></script>
-<!-- Ajax Mail -->
-<script src="/assets/js/ajax-mail.js"></script>
-<!-- Main JS -->
-<script src="/assets/js/main.js"></script>
+    <script src="/assets/js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="/assets/js/vendor/jquery-3.5.1.min.js"></script>
+    <script src="/assets/js/vendor/jquery-migrate-3.3.0.min.js"></script>
+    <script src="/assets/js/vendor/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/plugins.js"></script>
+    <!-- Ajax Mail -->
+    <script src="/assets/js/ajax-mail.js"></script>
+    <!-- Main JS -->
+    <script src="/assets/js/main.js"></script>
+  </body>
 
-</body>
-
-
-<!-- Mirrored from htmldemo.hasthemes.com/flone/flone/index-3.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Mar 2021 22:07:25 GMT -->
+  <!-- Mirrored from htmldemo.hasthemes.com/flone/flone/index-3.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 14 Mar 2021 22:07:25 GMT -->
 </html>
